Fixed Navbar on mobile

--- a/style.scss
+++ b/style.scss
@@ -15,7 +15,7 @@ html, body {
 }
 
 .content {
-    font-size: 24px !important;
+    font-size: 24px;
 }
 
 .container {
